--- a/src/main/resources/public/app/components/login/loginView.html
+++ b/src/main/resources/public/app/components/login/loginView.html
@@ -1,19 +1,24 @@
-<div class="panel panel-default" ng-controller="loginController">
-	
-	<div class="panel-body">
-		<div class="alert alert-danger" ng-show="error">
-			There was a problem logging in. Please try again.
+<div class="row">
+	<div class="col-md-8">
+		<div class="panel panel-default" ng-controller="loginController">
+			<div class="panel-heading"><b>Sign in</b></div>
+			<div class="panel-body">
+				<div class="alert alert-danger" ng-show="error">
+					There was a problem logging in. Please try again.
+				</div>
+				<form role="form" ng-submit="login()">
+					<div class="form-group">
+						<label for="username">Username</label> <input type="text"
+							class="form-control" id="username" name="username" ng-model="credentials.username" required/>
+					</div>
+					<div class="form-group">
+						<label for="password">Password <a href="#">(forgot password)</a></label> <input type="password"
+							class="form-control" id="password" name="password" ng-model="credentials.password" required/>
+					</div>
+					<button type="submit" class="btn btn-primary">Sign in</button>
+				</form>
+			</div>
 		</div>
-		<form role="form" ng-submit="login()">
-			<div class="form-group">
-				<label for="username">Username:</label> <input type="text"
-					class="form-control" id="username" name="username" ng-model="credentials.username" required/>
-			</div>
-			<div class="form-group">
-				<label for="password">Password:</label> <input type="password"
-					class="form-control" id="password" name="password" ng-model="credentials.password" required/>
-			</div>
-			<button type="submit" class="btn btn-primary">Submit</button>
-		</form>
 	</div>
+	<div class="col-md-2"></div>
 </div>
