--- a/src/main/resources/public/app/components/login/loginView.html
+++ b/src/main/resources/public/app/components/login/loginView.html
@@ -4,18 +4,25 @@
 			<div class="panel-heading"><b>Sign in</b></div>
 			<div class="panel-body">
 				<div class="alert alert-danger" ng-show="error">
-					There was a problem logging in. Please try again.
+					Invalid username or password.
 				</div>
-				<form role="form" ng-submit="login()">
+				<form name="frm" ng-submit="login()" novalidate>
 					<div class="form-group">
 						<label for="username">Username</label> <input type="text"
 							class="form-control" id="username" name="username" ng-model="credentials.username" required/>
+							 <div ng-if="frm.submitted" ng-messages="frm.username.$error">
+									<div ng-messages-include="app/components/error/errors.html"/>							  
+							  </div> 
 					</div>
 					<div class="form-group">
-						<label for="password">Password <a href="#">(forgot password)</a></label> <input type="password"
+						<label for="password">Password </label> <input type="password"
 							class="form-control" id="password" name="password" ng-model="credentials.password" required/>
+							 <div ng-if="frm.submitted" ng-messages="frm.password.$error">
+									<div ng-messages-include="app/components/error/errors.html"/>							  
+							  </div> 		
 					</div>
 					<button type="submit" class="btn btn-primary">Sign in</button>
+					
 				</form>
 			</div>
 		</div>
