added social media scrapping workaround

--- a/src/main/resources/public/app/components/article/articleView.html
+++ b/src/main/resources/public/app/components/article/articleView.html
@@ -1,5 +1,6 @@
 
-<div>
+<div my-loading-display load-indicator="loadingArticle"></div>
+<div ng-if="article">
  <title ng-bind="PageTitle.title()"></title>
   
 <meta name="description" content="{{ MetaInformation.metaDescription() }}">
