--- a/src/main/resources/public/app/components/author/authorView.html
+++ b/src/main/resources/public/app/components/author/authorView.html
@@ -1,5 +1,5 @@
-
-<div>
+<div my-loading-display load-indicator="loadingAuthor"></div>
+<div ng-if="authorInfo">
 	<div ng-if="editMode">
 		<div ng-include="'app/components/author/authorEditView.html'"></div>
 	</div>
