--- a/src/main/resources/public/app/components/blog/blogListView.html
+++ b/src/main/resources/public/app/components/blog/blogListView.html
@@ -1,5 +1,6 @@
 <!-- will contain a list of short articles -->
 
+<div my-loading-display load-indicator="loadingBlogList"></div>
  <div class="row"  ng-repeat="article in articleList" >
  
    <div class="col-md-12" >
