--- a/src/main/resources/public/app/components/article/articleEditView.html
+++ b/src/main/resources/public/app/components/article/articleEditView.html
@@ -56,7 +56,8 @@
 		
 
 		<div ng-if="user">
-			<button type="submit" class="btn btn-primary" >Save <i class="glyphicon glyphicon-floppy-disk"></i></button>
+			<button type="submit" class="btn btn-primary"  ng-disabled="saveLoading">Save <span  ng-show="saveLoading==true"><i class="fa fa-refresh fa-spin"></i></span></button>
+	
 		</div>
 		
 			    
