--- a/src/main/resources/public/app/components/author/authorEditView.html
+++ b/src/main/resources/public/app/components/author/authorEditView.html
@@ -49,8 +49,9 @@
 		
 
 		<div ng-if="user.isAdmin || authorInfo.authorId == user.authorId"">
-			<button type="submit" class="btn btn-primary" >Save <i class="glyphicon glyphicon-floppy-disk"></i></button>
-		</div>
+			<button type="submit" class="btn btn-primary" ng-disabled="saveLoading">Save  <span  ng-show="saveLoading==true"><i class="fa fa-refresh fa-spin"></i></span></button>
+			
+	</div>
 		
 			    
 	</form>
