--- a/src/main/resources/public/app/components/article/articleDisplayView.html
+++ b/src/main/resources/public/app/components/article/articleDisplayView.html
@@ -9,7 +9,7 @@
 			<p><small>
 		   	<a ui-sref="blog({type:article.type,category:all,page:null})">{{article.type}}</a>  | <a ui-sref="blog({type:article.type,category:article.category,page:null})">{{article.category}}</a>
 			<br/>
-			  posted by <a ui-sref="author({authorId:article.author.authorId})">{{article.author.firstName}} {{article.author.lastName}}</a>  {{article.dateCreated|date:'MMM dd, yyyy'}}
+			  posted by <a ui-sref="author({authorId:article.author.authorId})">{{article.author.firstName}} {{article.author.lastName}}</a> on {{article.dateCreated|date:'MMM dd, yyyy'}}
 				</small></p>
 		</div>
 		<div><p>{{article.description}}</p></div>		
@@ -24,9 +24,10 @@
 		
 	</div>
 	<div class="panel-footer white_background">
-	   
-		<div fb-like="articleUrl"></div>
-		<br/><br>
+			<span fb-like="articleUrl"></span>
+			
+		<br/><br/>
+	
 		<dir-disqus disqus-shortname="barscp"
 		         disqus-identifier="{{article.articleId}}"
 		         disqus-url="{{articleUrl}}"
