--- a/src/main/resources/public/app/components/article/articleDisplayView.html
+++ b/src/main/resources/public/app/components/article/articleDisplayView.html
@@ -1,6 +1,12 @@
 
-<div class="panel panel-default" ng-if="article">
+	<div class="alert alert-info" ng-if="article.isPublished=='N'" >
+					This article is not published.
+				</div>
+				
+<div class="panel panel-default" ng-if="article.isPublished=='Y' || (article.isPublished=='N' && user)">
+
 	<img ng-show="article.imageUrl" ng-src="{{article.imageUrl}}" class="img-responsive" alt="Responsive image"/>
+	
 	<div class="panel-body">
 		<div>
 			 <h1>{{article.title}}</h1>
@@ -13,23 +19,25 @@
 				</small></p>
 		</div>
 		<div><p>{{article.description}}</p></div>		
-		<!-- #articles are uploaded to the server, these are -->
-		<div ng-bind-html="article.content"></div>
-		
+		<div  compile="article.content"></div>
 		<div ng-if="article.author.authorId == user.authorId">
 			<br/>
 			<button type="button"  ng-click="setEditMode()" class="btn btn-primary">Edit <i class="glyphicon glyphicon-edit"/></button>	
+		
+			<span ng-if="article.isPublished=='N'">	<button type="button"  ng-click="publish(true)" class="btn btn-primary">Publish <span  ng-show="publishLoading==true"><i class="fa fa-refresh fa-spin"></i></span></button>	</span>
+			<span ng-if="article.isPublished=='Y'">	<button type="button"  ng-click="publish(false)" class="btn btn-primary">Unpublish <span  ng-show="publishLoading==true"><i class="fa fa-refresh fa-spin"></i></span></button>	</span>
 		</div> 
 		<br/><br/>
-		
+
 	</div>
-	<div class="panel-footer white_background">
+	
+	<div ng-if="article.isPublished=='Y'" class="panel-footer white_background">
 			<span fb-like="articleUrl"></span>
 			
 		<br/><br/>
 	
 		<dir-disqus disqus-shortname="barscp"
-		         disqus-identifier="{{article.articleId}}"
+		         disqus-identifier="{{articleUrl}}"
 		         disqus-url="{{articleUrl}}"
 		         ready-to-bind="{{readyToBind}}">
 		</dir-disqus>
