--- a/src/main/resources/public/app/components/change-password/changePasswordView.html
+++ b/src/main/resources/public/app/components/change-password/changePasswordView.html
@@ -1,29 +1,33 @@
-<div class="panel panel-default" ng-controller="ArticleEditController">
+<div class="panel panel-default" ng-show="user">
 	
 	<div class="panel-body">
-	<form name="frm" ng-submit="saveArticle()" novalidate>
-		<div class="alert alert-danger" ng-if="frm.submitted && frm.$invalid" >
-					Validation error encountered.
-				</div>
+	<form name="frm" ng-submit="changePassword()" novalidate>
+		<div class="alert alert-success" ng-show="message">
+					{{message}}
+			</div>
+			<div class="alert alert-danger" ng-show="error">
+					{{error}}
+			</div>
+		
 		
 		<div class="form-group">
-			<label for="article">Current Password</label>
-			<input name="title" type="text" class="form-control" id="article" ng-model="authorInfo.firstName" required > 
-			<div ng-if="frm.submitted" ng-messages="frm.title.$error">
+			<label for="currentPassword">Current Password</label>
+			<input name="currentPassword" type="password" class="form-control" id="currentPassword" ng-model="currentPassword" required > 
+			<div ng-if="frm.submitted" ng-messages="frm.currentPassword.$error">
 									<div ng-messages-include="app/components/error/errors.html"/>							  
 							  </div> 
 		</div>
 		<div class="form-group">
-			<label for="article">New Password</label>
-			<input name="title" type="text" class="form-control" id="article" ng-model="authorInfo.lastName" required > 
-			<div ng-if="frm.submitted" ng-messages="frm.title.$error">
+			<label for="newPassword1">New Password</label>
+			<input name="newPassword1" type="password" class="form-control" id="newPassword1" ng-model="newPassword1" required > 
+			<div ng-if="frm.submitted" ng-messages="frm.newPassword1.$error">
 									<div ng-messages-include="app/components/error/errors.html"/>							  
 							  </div> 
 		</div>
 			<div class="form-group">
-			<label for="article">Confirm New Password</label>
-			<input name="title" type="text" class="form-control" id="article" ng-model="authorInfo.email" required > 
-			<div ng-if="frm.submitted" ng-messages="frm.title.$error">
+			<label for="newPassword2">Confirm New Password</label>
+			<input name="newPassword2" type="password" class="form-control" id="newPassword2" ng-model="newPassword2" required > 
+			<div ng-if="frm.submitted" ng-messages="frm.newPassword2.$error">
 									<div ng-messages-include="app/components/error/errors.html"/>							  
 							  </div> 
 		</div>
@@ -31,9 +35,9 @@
 	
 		
 
-		<div ng-if="loginUser.isAdmin || authorInfo.authorId == loginUser.authorId"">
-			<button type="submit" class="btn btn-primary" >Save <i class="glyphicon glyphicon-floppy-disk"></i></button>
-		</div>
+				<button type="button" ng-click="doTheBack()" class="btn btn-primary" >Back </i></button>
+			<button type="submit" class="btn btn-primary" >Save <i class="glyphicon glyphicon-floppy-disk"> <span  ng-show="resetLoading==true"><i class="fa fa-refresh fa-spin"></i></span></i></button>
+		
 		
 			    
 	</form>
@@ -42,3 +46,7 @@
 	
 
 </div>
+
+	<div class="alert alert-danger" ng-show="!user">
+					You need to login to change your password
+			</div>
