--- a/src/main/resources/public/app/components/login/loginView.html
+++ b/src/main/resources/public/app/components/login/loginView.html
@@ -22,7 +22,7 @@
 							  </div> 		
 					</div>
 					<button type="submit" class="btn btn-primary" ng-disabled="loginLoading">Sign in <span  ng-show="loginLoading==true"><i class="fa fa-refresh fa-spin"></i></span></button>
-					
+					&nbsp;&nbsp;<a ui-sref="resetPassword"><small >Forgot Password</small></a> 
 				</form>
 			</div>
 		</div>
