--- a/src/main/resources/public/app/components/article/articleEditView.html
+++ b/src/main/resources/public/app/components/article/articleEditView.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default" ng-controller="ArticleEditController">
+<div class="panel panel-default" ng-controller="ArticleEditController" ng-show="user">
 	
 	<div class="panel-body">
 	<form name="frm" ng-submit="saveArticle()" novalidate>
@@ -56,7 +56,10 @@
 		
 
 		<div ng-if="user">
-			<button type="submit" class="btn btn-primary"  ng-disabled="saveLoading">Save <span  ng-show="saveLoading==true"><i class="fa fa-refresh fa-spin"></i></span></button>
+		<a  ui-sref="home" ng-show="article.articleId==null">cancel!</a>
+		<a  href="#" ng-click="cancelEdit()" ng-show="article.articleId">cancel</a>
+		
+		<button type="submit" class="btn btn-primary"  ng-disabled="saveLoading">Save <span  ng-show="saveLoading==true"><i class="fa fa-refresh fa-spin"></i></span></button>
 	
 		</div>
 		
@@ -64,6 +67,8 @@
 	</form>
 	</div>
 	
-	
+<div class="alert alert-danger" ng-show="!user">
+					You need to login to view this page
+			</div>	
 
 </div>
