--- a/src/main/resources/templates/socialMediaScrapper.html
+++ b/src/main/resources/templates/socialMediaScrapper.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+
+
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta property="og:title" th:content="${title}" />
-<meta property="og:site_name" th:content="barscp.com" />
-<meta property="og:url" th:content="${url}" />
-<meta property="og:description" th:content="${description}" />
-<meta property="og:image" th:content="${image}" />
-<meta property="og:type" content="article" />
-<title>Server side page for social media scrapper</title>
+<!-- SEARCH ENGINES -->
+	<meta name="author"  th:content="${author}"/>
+	<meta name="description" th:content="${description}" />
+	<link rel="canonical" th:content="${url}"/>
+<!-- Facebook -->
+	<meta property="og:title" th:content="${title}" />
+	<meta property="og:site_name" th:content="barscp.com" />
+	<meta property="og:url" th:content="${url}" />
+	<meta property="og:description" th:content="${description}" />
+	<meta property="og:image" th:content="${image}" />
+	<meta property="og:type" content="article" />
+	<meta property="fb:app_id" content="427122720793949"/>
+<!-- G++ -->
+	<meta itemprop="name"  th:content="${title}"/>
+	<meta itemprop="description" th:content="${description}"/>
+	<meta itemprop="image" th:content="${image}"/>
+<title th:text="${title}">Server side page for social media scrapper</title>
 </head>
 <body>
 	This is a page for social media scrapper, you should not be seeing
-	this. if you to kindly email me at bars_cp@yahoo.com
+	this. if you do, kindly email me at bars_cp@yahoo.com
 
 
 
