--- a/src/main/resources/public/app/components/author/authorDisplayView.html
+++ b/src/main/resources/public/app/components/author/authorDisplayView.html
@@ -1,25 +1,29 @@
 
 <div class="panel panel-default">
-	<div class="panel-body">
+	<div class="panel-body text-center">
+		<h2> {{authorInfo.firstName}} {{authorInfo.lastName}}</h2>
+		
 		<div class="row">
-		<div class="col-md-4 col-sm-5 col-xs-5">
+		
+		<div class="col-lg-4 col-md-4 col-sm-2 col-xs-2 ">
+		</div>
+		<div class="col-lg-4 col-md-4 col-sm-8 col-xs-8" >
+		
 		<img ng-src="{{authorInfo.profileImgUrl}}"
 			class="img-responsive img-rounded" />
 		</div>
-		<div class="col-md-8">
-		<h2>about {{authorInfo.firstName}} {{authorInfo.lastName}}</h2>
-		<a target="_blank"  ng-href="{{authorInfo.websiteUrl}}">{{authorInfo.websiteUrl}}</a>
+		<div class=" col-lg-4 col-md-4  col-sm-2 col-xs-2 ">
 		</div>
 		
 	</div>
 		
+		<a target="_blank"  ng-href="{{authorInfo.websiteUrl}}">{{authorInfo.websiteUrl}}</a>
 		
 		<div ng-bind-html="authorInfo.description"></div>
 
 
 
-	</div>
-	<div class="panel-footer">
+	
 		<div ng-if="authorInfo.authorId == user.authorId">
 			<br />
 
@@ -27,7 +31,8 @@
 				class="btn btn-primary">
 				Edit Profile <i class="glyphicon glyphicon-edit" />
 			</button>
-			&nbsp;&nbsp;<br />
+			
+			&nbsp;&nbsp;
 			<button type="button" ui-sref="changePassword"
 				class="btn btn-primary">
 				Change Password <i class="glyphicon glyphicon-edit" />
@@ -37,8 +42,9 @@
 			<!--  button  ui-sref="changePassword" class="btn btn-primary" >Change Password <i class="glyphicon glyphicon-edit"/></button-->
 
 		</div>
-		<button type="button" class="btn btn-primary" ng-click="doTheBack();">
-			Back</button>
+		<br/><br/>
+		<!--  a  ng-click="doTheBack();">
+			&lt;&lt; Back</a-->
 
 	</div>
 </div>
