updated upload file
upload file

--- a/src/main/resources/public/app/components/article/articleDisplayView.html
+++ b/src/main/resources/public/app/components/article/articleDisplayView.html
@@ -38,7 +38,7 @@
 			
 		<br/><br/>
 	
-		<dir-disqus disqus-shortname="barscp"
+		<dir-disqus disqus-shortname="imgjournal"
 		         disqus-identifier="{{articleUrl}}"
 		         disqus-url="{{articleUrl}}"
 		         ready-to-bind="{{readyToBind}}">
